--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 utilities = {path = "utilities"}
 tasks = {path = "tasks"}
+mimalloc = { version = "*", default-features = false }
 
 [profile.release]
 lto = true
+panic = "abort"
