--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -8,5 +8,7 @@ utilities = {path = "../utilities"}
 
 rand = "0.8.5"
 async-trait = "0.1.58"
-tokio = { version = "1.21.2", features = ["full"] }
+rustc-hash = "1.1.0"
+ustr = "0.9.0"
+tokio = { version = "1.22.0", features = ["full"] }
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
