--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -12,3 +12,4 @@ rustc-hash = "1.1.0"
 ustr = "0.9.0"
 tokio = { version = "1.22.0", features = ["full"] }
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
+kanal = "0.1.0-pre7"
