--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -13,3 +13,4 @@ ustr = "0.9.0"
 tokio = { version = "1.22.0", features = ["full"] }
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
 kanal = "0.1.0-pre7"
+derive-new = "0.5"
