--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -11,6 +11,8 @@ async-trait = "0.1.59"
 ahash = "0.8.2"
 ustr = "0.9.0"
 tokio = { version = "1.23.0", features = ["full"] }
+tokio-util = "0.7.4"
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
 kanal = "0.1.0-pre7"
 derive-new = "0.5"
+nohash-hasher = "0.2.0"
