--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -8,7 +8,7 @@ utilities = {path = "../utilities"}
 
 fastrand = "1.8.0"
 async-trait = "0.1.59"
-ahash = "0.8.2"
+hashbrown = "0.13.1"
 ustr = "0.9.0"
 tokio = { version = "1.23.0", features = ["full"] }
 tokio-util = "0.7.4"
