--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -16,3 +16,8 @@ rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
 kanal = "0.1.0-pre7"
 derive-new = "0.5"
 nohash-hasher = "0.2.0"
+prost = "0.11"
+prost-types = "0.11"
+
+[build-dependencies]
+prost-build = "0.11"
