--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -10,3 +10,4 @@ envconfig = "0.10"
 strum = { version = "0.24", features = ["derive"]}
 byte-unit = "4.0"
 derive-new = "0.5"
+nohash-hasher = "0.2"
