--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,16 @@ edition = "2021"
 
 [workspace]
 
+[workspace.dependencies]  
+coarsetime = "0.1"
+derive-new = "0.5"
+nohash-hasher = "0.2"
+
 [dependencies]
 utilities = {path = "utilities"}
 tasks = {path = "tasks"}
 mimalloc = { version = "*", default-features = false }
+
 
 [profile.release]
 lto = true
