--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -10,15 +10,16 @@ fastrand = "1.8"
 async-trait = "0.1"
 ahash = "0.8"
 ustr = "0.9"
-tokio = { version = "1.24", features = ["full"] }
+tokio = { version = "1.25", features = ["full"] }
 tokio-util = "0.7"
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
-kanal = "0.1.0-pre7"
-derive-new = "0.5"
-nohash-hasher = "0.2"
+kanal = "0.1.0-pre8"
 once_cell = "1.17"
 prost = "0.11"
 prost-types = "0.11"
+coarsetime= {workspace = true}
+nohash-hasher = {workspace = true}
+derive-new = {workspace = true}
 
 [build-dependencies]
 prost-build = "0.11"
