--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -14,9 +14,10 @@ tokio = { version = "1.25", features = ["full"] }
 tokio-util = "0.7"
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
 kanal = "0.1.0-pre8"
-once_cell = "1.17"
 prost = "0.11"
 prost-types = "0.11"
+tokio-dtls-stream-sink = "0.6.0"
+openssl = { version = "0.10", features = ["vendored"] }
 coarsetime= {workspace = true}
 nohash-hasher = {workspace = true}
 derive-new = {workspace = true}
