--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.25", features = ["full"] }
 tokio-util = "0.7"
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
 kanal = "0.1.0-pre8"
+rclite = "0.2"
 prost = "0.11"
 prost-types = "0.11"
 tokio-dtls-stream-sink = "0.6.0"
