--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -12,3 +12,4 @@ byte-unit = "4.0"
 coarsetime= {workspace = true}
 nohash-hasher = {workspace = true}
 derive-new = {workspace = true}
+branches = {workspace = true}
