--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -9,6 +9,7 @@ simple_logger = "4.0"
 envconfig = "0.10"
 strum = { version = "0.24", features = ["derive"]}
 byte-unit = "4.0"
+itertools = "0.10"
 coarsetime= {workspace = true}
 nohash-hasher = {workspace = true}
 derive-new = {workspace = true}
