--- a/tasks/Cargo.toml
+++ b/tasks/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 utilities = {path = "../utilities"}
 
 fastrand = "1.9"
-async-trait = "0.1"
 ustr = "0.9"
+dashmap = "5.4.0"
 tokio = { version = "1.2", features = ["full"] }
 tokio-util = "0.7"
 rdkafka = { version = "0.29", features = ["cmake-build","zstd-pkg-config"] }
@@ -17,7 +17,7 @@ prost = "0.11"
 prost-types = "0.11"
 tokio-dtls-stream-sink = "0.6"
 openssl = { version = "0.10", features = ["vendored"] }
-cached = "0.42"
+cached = "0.43"
 coarsetime= {workspace = true}
 nohash-hasher = {workspace = true}
 derive-new = {workspace = true}
